--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "explorer.compactFolders": false
+    "explorer.compactFolders": false,
+    "livePreview.defaultPreviewPath": "/src/Components/Timer.html"
 }
